--- a/index.html
+++ b/index.html
@@ -7,19 +7,20 @@
     <title>Document</title>
     <style>
         .padding{
-            padding-left: 20px;
+            padding-left: 40px;
         }
 
         .circle{
             width: 50px;
             height: 50px;
             border-radius: 50%;
+            margin: 0 auto;
         }
 
         .proverb{
             text-align: center;
             font-family:'Times New Roman', Times, serif;
-            font-size: 14px;
+            font-size: 22px;
         }
 
         body{
