delete comments and some fix

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <button id="button_input" class="button helping_margin">Проверить?</button>
         </form>
         <form id="target" target="_blank" class="button_form">
-            <button class="button">Пурейти</button>
+            <button class="button">Перейти</button>
         </form>
         <script src="script.js"></script>
     </div>
