--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <body>
     <div class="form_container">
         <form class="input_form">
-            <input id="input" type="text" value="://www.youtube.com/">
+            <input id="input" type="text" >
             <button id="button_input" class="button helping_margin">Проверить?</button>
         </form>
         <form id="target" target="_blank" class="button_form">
