--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
         p{
             margin-top: 91px;
         }
+
+        .helping_size{
+            width: 56px;
+        }
     </style>
 </head>
 <body id="container" >
